k8s/app-of-apps/infra/configuration/cluster-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      load-balancer.hetzner.cloud/name: "external-gateway"
      load-balancer.hetzner.cloud/location: "nbg1"
      load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
  listeners:
    - name: https
      # used for wildcard certs for cert-manager
      hostname: "*.niovial.io"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        # tls termination at gateway
        mode: Terminate
        certificateRefs:
          - name: niovial-io-tls
