k8s/app-of-apps/infra/configuration/tailscale-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tailscale
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  controllerName: io.cilium/gateway-controller
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: tailscale-gateway-config
    namespace: gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: management-gateway
  namespace: gateway-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  gatewayClassName: tailscale
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
