k8s/app-of-apps/infra/configuration/tailnet-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tailnet-grafana
  namespace: observability
spec:
  parentRefs:
    - name: management-gateway
      namespace: gateway-system
  hostnames:
    - "o11y.internal.niovial.io"
  rules:
    - backendRefs:
      - name: vm-stack-grafana
        port: 80
